--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-.main-body{
-    background-image: url("resource/background.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
+ 
 @font-face {
     font-family: "ShadowsIntoLight";
     src: url("font/ShadowsIntoLight-Regular.ttf");
@@ -19,4 +14,11 @@
     opacity: 75%;
     font-weight: bolder;
    
+ }
+
+ .signInBox{
+    width: 350px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: darkred;
  }
