--- a/style.css
+++ b/style.css
@@ -18,3 +18,9 @@
 .signUpBox{
    box-shadow: whitesmoke;
 }
+ .main-body{
+   background-image: url("resource/3.png");
+   background-position: center;
+   background-repeat: no-repeat;
+   
+ }
